--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
     deploy:
         runs-on: self-hosted
         steps:
+        - uses: actions/checkout@master
         - name: Run a one-line script
         - run: echo Hello, world!
         - run: yarn start
