--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
     deploy:
         runs-on: self-hosted
         steps:
-        - uses: actions/checkout@master
+        - uses: actions/checkout@v2
         - name: Run a one-line script
-        - run: echo Hello, world!
+          run: echo Hello, world!
+        - name: Yarn!!
         - run: yarn start
