--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         - name: Run a one-line script
           run: echo Hello, world!
         - name: Yarn!!
-        - run: yarn start
+          run: yarn start
